[package]
name = "tls-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23"
rustls-platform-verifier = "0.6"
x509-parser = "0.17"
clap = { version = "4", features = ["derive"] }
url = "2"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_env = "musl")'.dependencies]
rustls-native-certs = "0.8"

[[bin]]
name = "tls-inspector"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
strip = true